objects/Pricing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval1_Cycle_Time__c</fullName>
        <formula>Approver1_Date__c-Submitted_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Object 1 Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval3_Cycle_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Approver3_Date__c)),IF(NOT(ISBLANK(Approver2_Date__c)), Approver3_Date__c - Approver2_Date__c,IF(NOT(ISBLANK(Approver1_Date__c)),Approver3_Date__c - Approver1_Date__c,Approver3_Date__c - Submitted_On__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Object 3 Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Price_Requests__c</fullName>
        <description>This will hold the escalation duration for price requests</description>
        <label>Approval Escalation - Price Requests</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Pricing_Task__c</fullName>
        <label>Approval Escalation - Pricing Task</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approvar2_Cycle_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Approver2_Date__c)),IF(NOT(ISBLANK(Approver1_Date__c)), Approver2_Date__c - Approver1_Date__c,Approver2_Date__c - Submitted_On__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Object 2 Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approvar4_Cycle_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Approver4_Date__c)),IF(NOT(ISBLANK(Approver3_Date__c)),Approver4_Date__c - Approver3_Date__c,IF(NOT(ISBLANK(Approver2_Date__c)),Approver4_Date__c - Approver2_Date__c,IF(NOT(ISBLANK(Approver1_Date__c)),Approver4_Date__c - Approver1_Date__c,Approver4_Date__c - Submitted_On__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Object 4 Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver1_Date__c</fullName>
        <description>Identifies when the First Approver Approves the record</description>
        <label>Non-Object 1 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the First Approver who should approve the record</description>
        <label>Non-Object 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2_Date__c</fullName>
        <description>Identifies when the Second Approver Approves the record</description>
        <label>Non-Object 2 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Second Approver who should approve the record</description>
        <label>Non-Object 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3_Date__c</fullName>
        <description>Identifies when the Third Approver Approves the record</description>
        <label>Non-Object 3 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Third Approver who should approve the record</description>
        <label>Non-Object 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the User to whom the pricing Task is Assigned</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asynchronous_Call_Out_Indicator__c</fullName>
        <label>Asynchronous Call Out Indicator</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Key_Combination__c</field>
            <operation>equals</operation>
            <value>asdfsadfsadfsafd</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attachments_on_Customer_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments on Customer Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approver_Level1__c</fullName>
        <label>Auto Approver Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Approver_Level2__c</fullName>
        <label>Auto Approver Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Approver_Level3__c</fullName>
        <label>Auto Approver Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Identifies the Business Unit</description>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Level 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Level 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Level 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requestsn0Qh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Below_Current_Indicator__c</fullName>
        <label>Below Current Indicator</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Below_Current_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Below_Floor_Indicator__c</fullName>
        <description>Used to indicate whether any of the Request Item are Below Floor Price.</description>
        <label>Below Floor Indicator</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Below_Floor_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Below_Reference_Indicator__c</fullName>
        <description>Used to indicate whether any of the Request Item are Below Reference Price.</description>
        <label>Below Reference Indicator</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Below_Reference_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSR_Instruction__c</fullName>
        <label>CSR Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComPartner_Code__c</fullName>
        <label>ComPartner_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComPartner__c</fullName>
        <label>ComPartner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Current Approver with whom the record is</description>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Level__c</fullName>
        <description>Identifies approval level</description>
        <label>Current Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group_4_Code__c</fullName>
        <label>Customer Group 4 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_4__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Customer Group 4 specify certain internationally recognised procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Customer Group 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Block_Code__c</fullName>
        <label>Customer Order Block Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Block__c</fullName>
        <label>Customer Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the record is customer specific / Non Customer Specific</description>
        <label>Customer Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <label>Default Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Discount__c</fullName>
        <description>This field is used to store the default discount to be given for the line items in End User Rebate</description>
        <label>Default Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Per__c</fullName>
        <description>This field is used to store the default Per to be given for the line items in End User Rebate</description>
        <label>Default Per</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_UoM__c</fullName>
        <description>This field is used to store the default UoM to be given for the line items in End User Rebate</description>
        <label>Default UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegation_Comments__c</fullName>
        <label>Delegation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Standardized_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Standardized Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dist_Channel_Code__c</fullName>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel__c</fullName>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date assigned for the CSR to complete the Task</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Code__c</fullName>
        <label>End User Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Date_Price_Requests__c</fullName>
        <description>This will exclude the weekends from escalation for price requests</description>
        <formula>CASE(MOD( DATEVALUE(LastModifiedDate)- DATE(1900,1,7), 7),0,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+3,&quot;3 Days&quot;,LastModifiedDate+4,&quot;5 Days&quot;,LastModifiedDate+8,&quot;8 Days&quot;,LastModifiedDate+11,LastModifiedDate),1,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+3,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+10, LastModifiedDate),2,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+3,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+10, LastModifiedDate),3,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),4,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),5,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),6,CASE( Approval_Escalation_Price_Requests__c,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+9,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Date - Price Requests</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Date_Pricing_Task__c</fullName>
        <formula>CASE(MOD(DATEVALUE(LastModifiedDate)- DATE(1900,1,7), 7),0,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+3,&quot;3 Days&quot;,LastModifiedDate+4,&quot;5 Days&quot;,LastModifiedDate+8,&quot;8 Days&quot;,LastModifiedDate+11,LastModifiedDate),1,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+3,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+10, LastModifiedDate),2,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+3,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+10, LastModifiedDate),3,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+2,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),4,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),5,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+7,&quot;8 Days&quot;,LastModifiedDate+12, LastModifiedDate),6,CASE( Approval_Escalation_Pricing_Task__c ,&quot;2 Days&quot;,LastModifiedDate+4,&quot;3 Days&quot;,LastModifiedDate+5,&quot;5 Days&quot;,LastModifiedDate+9,&quot;8 Days&quot;,LastModifiedDate+12,LastModifiedDate),LastModifiedDate)</formula>
        <label>Escalation Date - Pricing Task</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Code__c</fullName>
        <label>Incoterms_Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_End_User_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if this Pricing Request belongs to the End User Rebate Flow (DPT Garments)</description>
        <label>Is End User Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <label>Key Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box will indicate whether user has requested to include Landing cost for the Gross floor and reference price check.</description>
        <label>Landing Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPC_Status__c</fullName>
        <label>Net Price Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Net Price</fullName>
                </value>
                <value>
                    <fullName>Net Price Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Incoterm__c</fullName>
        <label>Non-Standard Incoterm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Terms_Of_Payment__c</fullName>
        <label>Non-Standard Terms Of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <label>Pricing Condition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Exception__c</fullName>
        <label>Pricing Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Type__c</fullName>
        <label>Pricing Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Pricing</fullName>
                </value>
                <value>
                    <fullName>Pricing Task</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Reference Price</fullName>
                </value>
                <value>
                    <fullName>Floor Price</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Pricing Request</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Net Floor</fullName>
                </value>
                <value>
                    <fullName>Net Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Header_Approval_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Header Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Price_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Price Name</label>
        <referenceTo>Project_Price__c</referenceTo>
        <relationshipLabel>Pricing Requests (Project Price Tech)</relationshipLabel>
        <relationshipName>Pricing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Price</label>
        <referenceTo>Project_Price__c</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Detail__c</fullName>
        <label>Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Net Price</fullName>
                </value>
                <value>
                    <fullName>Net Price Received</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Class__c</fullName>
        <label>Request Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Massive</fullName>
                </value>
                <value>
                    <fullName>Customer Specific</fullName>
                </value>
                <value>
                    <fullName>Non Customer Specific</fullName>
                </value>
                <value>
                    <fullName>Mass Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Valid_From__c</fullName>
        <label>Request Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Valid_To__c</fullName>
        <label>Request Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Application_Id__c</fullName>
        <label>SAP Application Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_Id__c</fullName>
        <label>SAP Client Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesArea__c</fullName>
        <formula>Sales_Org_Code__c +&apos;-&apos;+  Dist_Channel_Code__c  +&apos;-&apos; + Division_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org. Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Admins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Admins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_BUAdmin_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>During the approval lifecycle is a PR is BU admin then this field will be marked as true .</description>
        <inlineHelpText>PR was sent to BU admin during price approval.</inlineHelpText>
        <label>Sent to BUAdmin Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_BUAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to BUAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Backup_Approver_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will checked when an approval is sent to backup approver in its approval life  cycle.</description>
        <inlineHelpText>Sent to backup approver.</inlineHelpText>
        <label>Sent To Backup Approver Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Backup_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be upated by workflow rule(time based), after 3 days of the request is assigned to new approver.</description>
        <label>Sent to Backup Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoldTo_Code__c</fullName>
        <label>SoldTo Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_Type__c</fullName>
        <label>Pricing Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot Price</fullName>
                </value>
                <value>
                    <fullName>Rebate Agreement</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Other Pricing Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standardized_Currency__c</fullName>
        <description>This field is used to store the standard currency of the associated Organizational Group Item</description>
        <label>Standardized Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standardized_UoM__c</fullName>
        <description>This field is used to store the standard UoM of the associated Organizational Group Item</description>
        <label>Standardized UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <description>Submitted On</description>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surcharges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Payment_Code__c</fullName>
        <label>Terms_Of_Payment_Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Payment__c</fullName>
        <label>Terms Of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cycle_Time__c</fullName>
        <formula>Approval1_Cycle_Time__c + Approvar2_Cycle_Time__c + Approval3_Cycle_Time__c + Approvar4_Cycle_Time__c + final_approval_cycle_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>